# tttc_practice

./: CMakeLists.txt  InlineFunctionPass.cpp  input.bc  input.ll  pass_test.cpp
MyInlinePass/: CMakeLists.txt  MyInlinePass.cpp  README.md
MyInlinePass/test/: out.ll  test.cpp  test.ll
clang/Lab1BelayAS/: .gitignore  CMakeLists.txt  UsersInfoType.cpp
clang/examples/: CMakeLists.txt
clang/examples/LoopWrapperPass/: CMakeLists.txt  LoopWrapperPass.cpp  test.cpp  test.ll
clang/examples/MaybeUnusedPlugin/: CMakeLists.txt  MaybeUnusedPlugin.cpp  test.cpp
clang/examples/RenameVars/: CMakeLists.txt  RenamePlugin.cpp  test2.c
clang/plugin/: CMakeLists.txt  PrintFunctionNames.cpp  test.cpp
clang/plugin_build/: CMakeCache.txt  Makefile  cmake_install.cmake
clang/test/lab1/sadovskaia_anna/clang-plugin/: CMakeLists.txt  ImplicitCastCounter.cpp  example.cpp
clang/test/lab2/sadovskaia_anna/: CMakeLists.txt  InsertLoopMarkers.cpp
lab1/clang-plugin/: Lab1Plugin.cpp
llvm_pass/: CMakeLists.txt  InstrumentationPass.cpp
passes/mypass/: .gitignore  README.md
passes/mypass/example/: example.cpp  wrap_funcs.cpp
passes/mypass/src/: CMakeLists.txt  CountInstructions.cpp  LoopWrapper.cpp
passes/mypass/tests/test2/: test.cpp
plugin/: CMakeLists.txt  OutputofUserData.cpp  example.cpp  example2.cpp
